fix bug: #271002 fix issue with remove order
Former-commit-id: 9dc0f76831456ec14e5a3e7955633e8f65ab06d7